stunnel4 (3:5.04-1) unstable; urgency=low

  * New upstream release:
    - adds status target to initscript (closes: #750943)
    - refresh patches
    - drop 13-init-script-typo.patch , included upstream
  * Update Standards-Version to 3.9.6 .

  [ Santiago Vila <sanvila@unex.es> ]
  * Fix logrotate typo (closes: #762242).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 06 Oct 2014 15:51:07 +0000

stunnel4 (3:5.03-1) unstable; urgency=medium

  * New upstream version:
    - refresh the 02-rename-binary, 10-no-zlib-compression, and
      12-restore-pidfile-default patches
    - drop the 09-init-script-ulimits patch, it was actually
      included upstream in 5.02
    - add the 13-init-script-typo patch to remove a stray quote
  * Add the 14-lsb-init-functions patch to source /lib/lsb/init-functions,
    although the init script does not use anything there yet.

 -- Peter Pentchev <roam@ringlet.net>  Sun, 10 Aug 2014 01:55:32 +0300

stunnel4 (3:5.02-1) unstable; urgency=medium

  * New upstream version:
    - drop the 04-selective-tunnel-restart, 06-init-script-description,
      and 07-init-script-status patches, applied upstream
    - refresh the 01-fix-paths, 02-rename-binary, 03-runas-user,
      05-logrotate-warning-in-sample-conf, 08-client-example,
      09-init-script-ulimits, and 12-restore-pidfile-default patches
    - augment the 01-fix-paths patch to also move the pidfile to
      /var/run/ and not /usr/var/run/.

 -- Peter Pentchev <roam@ringlet.net>  Tue, 10 Jun 2014 17:23:32 +0300

stunnel4 (3:5.01-3) unstable; urgency=medium

  * Add the 12-restore-pidfile-default patch to restore stunnel's
    "create the pid file by default" behavior, since the init script
    has no way of monitoring the started stunnel4 processes otherwise.
    The init script now warns about configurations with no "pid"
    setting; in a future version it will refuse to start stunnel for
    these configurations.  Closes: #744851
