@@ -2,11 +2,11 @@ Description: Add a client config example to stunnel4(8).
 Author: Peter Pentchev <roam@ringlet.net>
 Forwarded: not-yet
 Bug-Debian: http://bugs.debian.org/644398
-Last-Update: 2014-06-10
+Last-Update: 2014-10-16
 
 --- a/doc/stunnel.8
 +++ b/doc/stunnel.8
-@@ -903,6 +903,17 @@
+@@ -906,6 +906,17 @@
  \&    connect = servername:993
  .Ve
  .PP
