@@ -6,11 +6,11 @@ Description: Disable RLE compression.
 Forwarded: no
 Author: Peter Pentchev <roam@ringlet.net>
 Bug-Debian: http://bugs.debian.org/744350
-Last-Update: 2014-04-14
+Last-Update: 2014-10-16
 
 --- a/src/options.c
 +++ b/src/options.c
-@@ -163,7 +163,16 @@
+@@ -349,7 +349,16 @@
          else if(!strcasecmp(arg, "zlib"))
              return "zlib compression is disabled in the Debian package of OpenSSL";
          else if(!strcasecmp(arg, "rle"))
